feat: add "Compare" button and adjust the layout accordingly

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -6,6 +6,11 @@ $button-spacing: 5px;
   margin-left: $button-spacing;
 }
 
+.compare-button {
+  width: $button-width;
+  margin-left: $button-spacing;
+}
+
 .export-button {
   width: $button-width;
   margin-left: $button-spacing;
